
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ WCHAR ;
typedef int UINT ;
typedef scalar_t__* LPWSTR ;
typedef int INT ;
typedef int HRSRC ;
typedef int HINSTANCE ;
typedef int HGLOBAL ;


 int FindResourceW (int ,int ,scalar_t__*) ;
 int LOWORD (int) ;
 int LoadResource (int ,int ) ;
 scalar_t__* LockResource (int ) ;
 int MAKEINTRESOURCEW (int) ;
 scalar_t__ RT_STRING ;
 int memcpy (scalar_t__*,scalar_t__*,int) ;
 int min (int,scalar_t__) ;

INT
SampLoadString(HINSTANCE hInstance,
               UINT uId,
               LPWSTR lpBuffer,
               INT nBufferMax)
{
    HGLOBAL hmem;
    HRSRC hrsrc;
    WCHAR *p;
    int string_num;
    int i;


    hrsrc = FindResourceW(hInstance,
                          MAKEINTRESOURCEW((LOWORD(uId) >> 4) + 1),
                          (LPWSTR)RT_STRING);
    if (!hrsrc)
        return 0;

    hmem = LoadResource(hInstance, hrsrc);
    if (!hmem)
        return 0;

    p = LockResource(hmem);
    string_num = uId & 0x000f;
    for (i = 0; i < string_num; i++)
        p += *p + 1;

    i = min(nBufferMax - 1, *p);
    if (i > 0)
    {
        memcpy(lpBuffer, p + 1, i * sizeof(WCHAR));
        lpBuffer[i] = 0;
    }
    else
    {
        if (nBufferMax > 1)
        {
            lpBuffer[0] = 0;
            return 0;
        }
    }

    return i;
}
